[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "libero"
version = "1.0.0"
description = "LIBERO: Benchmarking Knowledge Transfer for Lifelong Robot Learning"
readme = "README.md"
license-files = ["LICENSE"]
requires-python = ">=3"
authors = [
    { name = "Bo Liu", email = "bliu@cs.utexas.edu" },
    { name = "Yifeng Zhu", email = "yifengz@cs.utexas.edu" },
    { name = "Chongkai Gao" },
    { name = "Yihao Feng" },
    { name = "Qiang Liu" },
    { name = "Yuke Zhu" },
    { name = "Peter Stone" },
]
dependencies = []

[project.scripts]
"libero.config_copy" = "scripts.config_copy:main"
"libero.create_template" = "scripts.create_template:main"
"lifelong.eval" = "libero.lifelong.evaluate:main"
"lifelong.main" = "libero.lifelong.main:main"

# [tool.hatch.version]
# path = "libero/__init__.py"

[tool.hatch.build.targets.sdist]
include = [
    "/libero",
]
